@@ -1,5 +1,11 @@
 2010-05-20  Alan McGovern  <amcgovern@novell.com>
 
+	* StandardCollectionView.cs: You can't remove an item if we're
+	  in AddNew mode. Throw exceptions in Remove/RemoveAt if we're
+	  in edit/add mode.
+
+2010-05-20  Alan McGovern  <amcgovern@novell.com>
+
 	* StandardCollectionView.cs: Add in some more error checking.
 
 2010-05-20  Alan McGovern  <amcgovern@novell.com>
